--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -54,7 +54,7 @@ table {
 */
 body {
   color: #888;
-  font: 300 16px/22px "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font: 300 16px/22px "Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 /*
@@ -196,15 +196,30 @@ p a {
   border-top: 4px solid #648880;
   float: left;
   font-size: 48px;
+  font-weight: 100;
+  letter-spacing: .5px;
   line-height: 44px;
   padding: 40px 0 22px 0;
+  text-transform: uppercase;
 }
-.tagline{
+.tagline {
   margin: 66px 0 22px 0;
+  text-align: right;
 }
 .primary-nav {
   font-size: 14px;
   font-weight: 400;
+  letter-spacing: .5px;
+  text-transform: uppercase;
+}
+/*
+  ========================================
+  Navigation
+  ========================================
+*/
+
+.nav {
+  text-align: right;
 }
 /*
   ========================================
@@ -232,12 +247,14 @@ p a {
 .hero {
   line-height: 44px;
   padding: 22px 80px 66px 80px;
+  text-align: center;
 }
 .hero h2 {
   font-size: 36px;
 }
 .hero p {
   font-size: 24px;
+  font-weight: 100;
 }
 .teaser a:hover h3 {
   color: #a9b2b9;
