--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -52,6 +52,7 @@ table {
   Custom styles
   ========================================
 */
+
 body {
   background: #293f50;
   color: #888;
@@ -116,24 +117,40 @@ body {
   clear: both;
   *zoom: 1;
 }
- /*
+
+/*
   ========================================
   Rows
   ========================================
 */
 
+.row,
+.row-alt {
+  min-width: 960px;
+}
 .row {
   background: #fff;
-  min-width: 960px;
   padding: 66px 0 44px 0;
 }
+.row-alt {
+  background: #cbe2c1;
+  background: -webkit-linear-gradient(to right, #a1d3b0, #f6f1d3);
+  background:    -moz-linear-gradient(to right, #a1d3b0, #f6f1d3);
+  background:         linear-gradient(to right, #a1d3b0, #f6f1d3);
+  padding: 44px 0 22px 0;
+}
+
 /*
   ========================================
   Typography
   ========================================
 */
+
 h1, h2, h3, h4 {
   color: #648880;
+}
+h1, h3, h4, h5, p {
+  margin-bottom: 22px;
 }
 h1 {
   font-size: 36px;
@@ -153,15 +170,28 @@ h5 {
   color: #a9b2b9;
   font-size: 14px;
   font-weight: 400;
+  text-transform: uppercase;
 }
 strong {
   font-weight: 400;
 }
-cite, em {
+cite,
+em {
   font-style: italic;
 }
-h1, h3, h4, h5, p {
-  margin-bottom: 22px;
+
+/*
+  ========================================
+  Leads
+  ========================================
+*/
+
+.lead {
+  text-align: center;
+}
+.lead p {
+  font-size: 21px;
+  line-height: 33px;
 }
 
 /*
@@ -240,15 +270,7 @@ p a {
   letter-spacing: .5px;
   text-transform: uppercase;
 }
-/*
-  ========================================
-  Navigation
-  ========================================
-*/
 
-.nav {
-  text-align: right;
-}
 /*
   ========================================
   Primary footer
@@ -264,6 +286,24 @@ p a {
 .primary-footer small {
   float: left;
   font-weight: 400;
+}
+
+/*
+  ========================================
+  Navigation
+  ========================================
+*/
+
+.nav {
+  text-align: right;
+}
+.nav li {
+  display: inline-block;
+  margin: 0 10px;
+  vertical-align: top;
+}
+.nav li:last-child {
+  margin-right: 0;
 }
 
 /*
@@ -287,4 +327,21 @@ p a {
 }
 .teaser a:hover h3 {
   color: #a9b2b9;
+}
+
+/*
+  ========================================
+  Speakers
+  ========================================
+*/
+  
+.speaker-info {
+  border: 1px solid #dfe2e5;
+  border-radius: 5px;
+  margin-top: 88px;
+  padding: 22px 0;
+  text-align: center;
+}
+.speaker {
+  margin-bottom: 44px;
 }
